# GraphRAG-workflow

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ETL/: README.md  requirements.txt  schema.cypher
chat/: .dockerignore  Dockerfile  app.py  pyproject.toml
chat/tests/: test_app.py
contextual-embeddings-agentic-workflow/: README.md
contextual-embeddings-agentic-workflow/contextual_pipeline/: README.md  pyproject.toml
contextual-embeddings-agentic-workflow/contextual_pipeline/scripts/: check_provider_source.py  test_agent_smoke.py  verify_v1_claims.py  verify_v2_pilot.py
contextual-embeddings-agentic-workflow/contextual_pipeline/src/: config.py  routing.py  schemas.py  starter.py  worker.py
contextual-embeddings-agentic-workflow/contextual_pipeline/src/activities/: embed.py  fetch.py  generate_context.py  write.py
contextual-embeddings-agentic-workflow/contextual_pipeline/src/agents/: context_agent.py
contextual-embeddings-agentic-workflow/contextual_pipeline/src/cypher/: write_context.cypher
contextual-embeddings-agentic-workflow/contextual_pipeline/src/cypher/fetch_ids/: callouts.cypher  codeblocks.cypher  hooks.cypher  messagetypes.cypher  permissionmodes.cypher  providers.cypher  sections.cypher  settingkeys.cypher  tablerows.cypher  tools.cypher
contextual-embeddings-agentic-workflow/contextual_pipeline/src/cypher/fetch_nodes/: callouts.cypher  codeblocks.cypher  entities.cypher  sections.cypher  tablerows.cypher
contextual-embeddings-agentic-workflow/contextual_pipeline/src/prompts/: callout_prompt.txt  codeblock_prompt.txt  context_generation.txt  entity_prompt.txt  section_prompt.txt  tablerow_prompt.txt
contextual-embeddings-agentic-workflow/contextual_pipeline/src/workflows/: parent.py  per_type.py
contextual-embeddings-agentic-workflow/contextual_pipeline/tests/: conftest.py  test_context_agent_contract.py  test_cypher_safety.py  test_fetch_contract.py  test_indexed_text_format.py  test_pydantic_validation.py  test_retry_chain.py  test_routing.py  test_templater.py  test_verify_v2_contract.py  test_workflow_contract.py  test_write_contract.py
graphrag-agent-workflow/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md
ragas_evals/: __init__.py
tests/: test_activity_retrieve.py  test_answerer_citations.py  test_api.py  test_config.py  test_embeddings.py  (+10 more)
(+525 files in other folders)
