[project]
name = "graphrag-chat"
version = "0.1.0"
description = "Chainlit chat UI for the GraphRAG Q&A agent."
requires-python = ">=3.11"
dependencies = [
    "chainlit>=1.3,<2",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
